fix: aligned to the center, add cursor pointer

--- a/src/components/auth/new-password-form/new-password.module.scss
+++ b/src/components/auth/new-password-form/new-password.module.scss
@@ -4,7 +4,7 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: center;
-
+  margin: 36px auto;
   width: 420px;
   height: 456px;
   padding: 33px 36px 30px;
